--- a/textInterface/textInterface.css
+++ b/textInterface/textInterface.css
@@ -45,3 +45,21 @@
   font-style: italic;
   color: var(--offwhite);
 }
+
+.output img {
+  margin: 1em;
+  max-width: 80%;
+  animation : fade-in 500ms;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+    transform-origin: top left;
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
